[project]
name = "work"
version = "0.2.0"
description = "A FastAPI proxy server that wraps Google Gemini API (direct) and Vertex AI, so friends can use your AI quota without seeing your real API keys."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.74.0",
    "google-cloud-aiplatform>=1.60.0",
    "python-dotenv>=1.0.0",
]
